--- a/PyLUR/Code/Documentation/PyLUR_manual_BrowserFriendly.Rmd
+++ b/PyLUR/Code/Documentation/PyLUR_manual_BrowserFriendly.Rmd
@@ -81,7 +81,7 @@ The installation may take a while. Once the installation is finished, the list u
 
 After these four packages have been installed, click the back arrow in the menu on the left hand side. 
 
-6. Click Open another project, browse to the PyLUR.aprx and double-click to open it. In the Catalog window double-click Toolboxes, then double-click PyLUR.tbx. This will open the PyLUR toolbox, which contains the BuildLUR and ApplyLUR scripts. Running either of these script will open the Build LUR or Apply LUR wizard, respectively.
+6. Click Open another project, browse to the PyLUR.aprx ArcGIS Pro Project file and double-click to open it. The PyLUR.aprx file can be found in the PyLUR folder in the PyLUR repository. In the Catalog window double-click Toolboxes, then double-click PyLUR.tbx. This will open the PyLUR toolbox, which contains the BuildLUR and ApplyLUR scripts. Running either of these script will open the Build LUR or Apply LUR wizard, respectively.
 
 # General Information {.tabset .tabset-pills}
 
@@ -977,14 +977,14 @@ This section provides a guided tutorial for building and applying a LUR model us
 
 ## Before you start
 
-1. Download ExampleData.gdb.zip from the PyLUR repository on GitHub and unzip the ExampleData.gdb file geodatabase.
+1. Ensure that you have cloned or downloaded the PyLUR repository from GitHub, including the ExampleData folder.
 2. Follow the instructions in the [Installation](#installation) section to ensure that the additional Python packages required by PyLUR have been installed.
 3. Create a directory where you would like to store outputs from the model, for example C:&#92;Work&#92;PyLUROutput. Please ensure that you have write access to this directory and that there are no spaces in the file path.  
 
 ## Starting the PyLUR wizard
 
-1. Start ArcGIS Pro and open the PyLUR project.
-2. In the Catalog window right-click Folders and click Add Folder Connection. Create a connection to the directory in which the ExampleData.gdb file geodatabase has been saved.  
+1. Start ArcGIS Pro and open the PyLUR project. The PyLUR.aprx project file can be found in the PyLUR folder in the PyLUR repository.
+2. In the Catalog window right-click Folders and click Add Folder Connection. Create a connection to the ExampleData.gdb file geodatabase, which is stored in the ExampleData folder in the PyLUR repository.  
 3. Double-click toolboxes, double-click PyLUR.tbx, then double-click the BuildLUR script. In the Geoprocessing window on the right click Run. This will open the Build LUR wizard.
 
 ## Settings
