--- a/paper.bib
+++ b/paper.bib
@@ -18,7 +18,7 @@
    volume = {151},
    pages = {1-10},
    ISSN = {0013-9351},
-   DOI = {https://doi.org/10.1016/j.envres.2016.07.005},
+   DOI = {10.1016/j.envres.2016.07.005},
    url = {http://www.sciencedirect.com/science/article/pii/S0013935116302894},
    year = {2016},
    type = {Journal Article}
@@ -67,7 +67,7 @@
    number = {2},
    pages = {197-209},
    ISSN = {0022-0981},
-   DOI = {https://doi.org/10.1016/S0022-0981(03)00359-9},
+   DOI = {10.1016/S0022-0981(03)00359-9},
    url = {http://www.sciencedirect.com/science/article/pii/S0022098103003599},
    year = {2004},
    type = {Journal Article}
